# footron-controller

./: .gitignore  MANIFEST.in  README.md  copy-content.sh  copy-demo-apps.sh  make-cstv-dir.sh  setting-up-chrome.md  setup.cfg
.github/workflows/: black-lint.yml
api/: api_routes.py  app.py  constants.py  messaging.py  test_app_client.py  test_client.py
api/data/: __init__.py  auth.py  controller.py
api/protocol/: __init__.py  errors.py  messages.py
api/routes/: api.py  messaging.py
apps/clock/: config.json
apps/clock2/: config.json  index.html
apps/clock2/static/: style.css
content/apps/clock/: config.json
content/apps/clock2/: app.json  config.json
content/apps/clock2/static/: style.css
content/apps/life/: app.json
content/apps/life/static/: single-large.css
content/video-player/static/: script.js
controller/: controller.py  handler.py
cstv_controller/: api.py  apps.py  collections.py  constants.py  controller.py  placard.py
footron_controller/: api.py  apps.py  browser_runner.py  collection.py  constants.py  controller.py  environments.py  experiences.py  placard.py  ports.py  releases.py  types.py  util.py  video_devices.py
footron_controller/data/: capture.py  collection.py  colors.py  folder.py  groupings.py  loader.py  placard.py  ports.py  screenshot.py  stability.py  tag.py  tags.py  video_devices.py  wm.py
footron_controller/scripts/: gpu-stable.py
footron_controller/static/video-player/: index.html  script.js  style.css
footron_timer/: __main__.py  api.py  models.py  timer.py
timer/: timer.py
(+6 files in other folders)
