[metadata]
name = footron-controller
version = 0.1
url = https://github.com/BYU-PCCL/footron-controller
license = MIT
author = BYU PCCL

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
scripts =
    bin/ft-video-devs
install_requires =
    xdg
    fastapi
    uvicorn[standard]
    aiohttp
    docker
