[metadata]
name = footron-controller
version = 0.1
url = https://github.com/BYU-PCCL/footron-controller
license = MIT
author = BYU PCCL

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
scripts =
    bin/ft-video-devs
install_requires =
    footron-protocol @ git+https://github.com/BYU-PCCL/footron-protocol-python.git
    # ZMQ communication with the window manager
    pyzmq
    xdg
    fastapi
    uvicorn[standard]
    python-multipart
    aiohttp
    # Used in Docker images
    docker
    # Error tracking
    rollbar
    # GPU stability check
    torch
    httpx
    Pillow
    # Parsing toml files
    tomli
    # For taking window screenshots
    python-xlib
